# medpoint

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  prescription_models.py  prescriptions.py
backend/app/schemas/: __init__.py  auth.py  prescription.py
backend/app/services/: __init__.py  auth_service.py  prescription_model_service.py  prescription_service.py
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.paths.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: protected-route.tsx
frontend/src/components/dashboard/: highlights.tsx  pending-alerts.tsx  recent-patients.tsx
frontend/src/components/layout/: app-layout.tsx  public-layout.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/prescription/: category-form.tsx  category-item-list.tsx  category-selector.tsx  model-actions.tsx  model-list.tsx  prescription-tabs.tsx  unified-prescription-interface.tsx
frontend/src/components/ui/: button.tsx  card.tsx  tabs.tsx  textarea.tsx  toaster.tsx
frontend/src/context/: auth-context.tsx  theme-context.tsx
frontend/src/hooks/: usePrescriptionForm.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: dashboard.tsx  login.tsx  patients.tsx  prescription-models.tsx  prescription.tsx
frontend/src/routes/: config.tsx
frontend/src/services/: auth-service.ts  file-system-service.ts  prescription-model-service.ts  prescription-service.ts
frontend/src/types/: auth.ts  prescription.ts
(+4 files in other folders)
