[project]
name = "medipoint-central-backend"
version = "0.1.0"
description = "Backend FastAPI para o MediPoint Central"
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.115.0",
  "uvicorn[standard]~=0.30.0",
  "pydantic~=2.7.0",
  "python-multipart~=0.0.9",
  "sqlalchemy~=2.0.30",
  "alembic~=1.13.2",
  "python-jose[cryptography]~=3.3.0",
  "passlib[bcrypt]~=1.7.4",
  "psycopg2-binary~=2.9.9",
  "aiosqlite~=0.20.0",
  "xlwt~=1.3.0",
  "xlrd~=2.0.1",
  "reportlab~=4.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3.0",
  "httpx~=0.27.0",
  "ruff~=0.5.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
